src/ariel-os-macros/tests/ui/config/no_parameters.stderr
error: custom attribute panicked
 --> tests/ui/config/no_parameters.rs:9:1
  |
9 | #[riot_rs::config]
  | ^^^^^^^^^^^^^^^^^^
  |
  = help: message: a configuration kind must be specified
